--- a/angular_mobx_examples/todos/angular_todos/web/styles.css
+++ b/angular_mobx_examples/todos/angular_todos/web/styles.css
@@ -270,13 +270,13 @@ label[for='toggle-all'] {
 	width: 60px;
 	height: 34px;
 	text-align: center;
-	border: none; /* Mobile Safari */
+	border: 1px; /* Mobile Safari */
 }
 
 #toggle-all:before {
 	content: '❯';
 	font-size: 22px;
-	color: #e6e6e6;
+	color: #efd5d5;
 	padding: 10px 27px 10px 27px;
 }
 
@@ -331,11 +331,14 @@ label[for='toggle-all'] {
 }
 
 #todo-list li .toggle:after {
-	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
+	content: '❯';
+	font-size: 22px;
+	color: #efd5d5;
+	padding: 10px 27px 10px 27px;
 }
 
 #todo-list li .toggle:checked:after {
-	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
+	color: #448037;
 }
 
 #todo-list li label {
@@ -349,7 +352,7 @@ label[for='toggle-all'] {
 }
 
 #todo-list li.completed label {
-	color: #d9d9d9;
+	color: #ccc7c7;
 	text-decoration: line-through;
 }
 
